updated library code

--- a/voting_app/static/voting_app/landingPage/css/style.css
+++ b/voting_app/static/voting_app/landingPage/css/style.css
@@ -1,21 +1,8 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  color: #fff;
-  background: url("../img/bg.png") top center no-repeat;
-  background-size: cover;
-  position: relative;
 }
 
-body::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: rgba(34, 34, 34, 0.8);
-}
 
 @media (min-width: 1024px) {
   body {
@@ -85,7 +72,7 @@ h6 {
 #header {
   position: relative;
   width: 100%;
-  padding: 100px 0;
+  padding: 50px 0;
   /* countdown */
 }
 
@@ -114,7 +101,7 @@ h6 {
   width: 150px;
   height: 200px;
   padding: 15px 0;
-  background: rgba(255, 255, 255, 0.12);
+  border: 1px solid #012970;
   border-top: 5px solid #012970;
 }
 
