--- a/voting_app/templates/voting_app/index.html
+++ b/voting_app/templates/voting_app/index.html
@@ -17,14 +17,18 @@
 </head>
 
 <body>
+<h5 style="font-size: 30px;font-weight: 700;letter-spacing: 1px;color: #012970;position:absolute;left:80px;top:30px;">OnlinePoll</h5>
+
   <!-- ======= Header ======= -->
+  <div class="row"  style="padding-top:100px!important;">
   {% if events %}
    {% for event in events %}
-      <div id="header" class="d-flex-row align-items-center">
-        <div class="container d-flex flex-column align-items-center" data-con-id="container_{{event.id}}">
+      <div class="col-12">
+       <div id="header" class="d-flex-row align-items-center">
+        <div class="container d-flex flex-column align-items-center" data-con-id="container_{{event.id}}" style="box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);width:60%;border-radius:20px;">
     
-          <h1>{{event.event_name}}</h1>
-          <div class="col-12 countdown d-flex justify-content-center container_{{event.id}}" data-count="{{ event.ending_date }}">
+          <h1 class="mt-5" style="color:#012970!important">{{event.event_name}}</h1>
+          <div class="col-12 countdown nt-5 d-flex justify-content-center container_{{event.id}}" data-count="{{ event.ending_date }}">
             <div>
               <h3 class="days_container_{{event.id}}">%d</h3>
               <h4>Days</h4>
@@ -44,57 +48,96 @@
           </div>
     
         {% if user.is_authenticated %}
-        <a href="{% url 'event_page' event.event_code %}" class="btn btn-primary button_container_{{event.id}}" style="color:#fff!important;--bs-btn-bg: #012970!important;
-        --bs-btn-border-color: #012970!important;">
+          <a href="{% url 'event_page' event.event_code %}" class="btn btn-primary button_container_{{event.id}} mb-3" style="color:#fff!important;--bs-btn-bg: #012970!important;-bs-btn-border-color: #012970!important;">
             Vote Now
-        </a>
-        <a href="{% url 'event_page' event.event_code %}" class="btn btn-primary result_container_{{event.id}}" style="display:none;color:#fff!important;--bs-btn-bg: #012970!important;
-        --bs-btn-border-color: #012970!important;">
+          </a>
+          <a href="{% url 'event_page' event.event_code %}" class="btn btn-primary result_container_{{event.id}} mb-3" style="display:none;color:#fff!important;--bs-btn-bg: #012970!important;--bs-btn-border-color: #012970!important;">
             View Results
-        </a>
+          </a>
         {% else %}
-        <a href="{% url 'login' %}" class="btn btn-primary">
+          <a href="{% url 'login' %}" class="btn btn-primary mb-3">
             Login to Cast Your Vote
-        </a>
+          </a>
         {% endif %}
     
         </div>
-
-      </div>
+       </div>
+      </div>  
    {% endfor %}
   {% endif %}
+  </div>
 
   <main id="main">
+
     
-    <!-- ======= About Us Section ======= -->
-    <section id="about" class="about" style="visibility: hidden;">
-        <div class="lop">
+     <!-- ======= Contact Us Section ======= -->
+     <section id="contact" class="contact" style="visibility: hidden;">
+        <div class="container">
   
-          <div class="row content">
-            <div class="col-lg-6">
-              <h2>Eum ipsam laborum deleniti velitena</h2>
-              <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+          <div class="section-title">
+            <h2>Contact Us</h2>
+          </div>
+  
+          <div class="row justify-content-center">
+  
+            <div class="col-lg-10">
+  
+              <div class="info-wrap">
+                <div class="row">
+                  <div class="col-lg-4 info">
+                    <i class="bi bi-geo-alt"></i>
+                    <h4>Location:</h4>
+                    <p>A108 Adam Street<br>New York, NY 535022</p>
+                  </div>
+  
+                  <div class="col-lg-4 info mt-4 mt-lg-0">
+                    <i class="bi bi-envelope"></i>
+                    <h4>Email:</h4>
+                    <p>info@example.com<br>contact@example.com</p>
+                  </div>
+  
+                  <div class="col-lg-4 info mt-4 mt-lg-0">
+                    <i class="bi bi-phone"></i>
+                    <h4>Call:</h4>
+                    <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+                  </div>
+                </div>
+              </div>
+  
             </div>
-            <div class="col-lg-6 pt-4 pt-lg-0">
-              <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum
-              </p>
-              <ul>
-                <li><i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-                <li><i class="bi bi-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                <li><i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
-              </ul>
-              <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-              </p>
+  
+          </div>
+  
+          <div class="row justify-content-center">
+            <div class="col-lg-10">
+              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <div class="row">
+                  <div class="col-md-6 form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  </div>
+                  <div class="col-md-6 form-group mt-3 mt-md-0">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  </div>
+                </div>
+                <div class="form-group mt-3">
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                </div>
+                <div class="form-group mt-3">
+                  <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                </div>
+                <div class="my-3">
+                  <div class="loading">Loading</div>
+                  <div class="error-message"></div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                </div>
+                <div class="text-center"><button type="submit">Send Message</button></div>
+              </form>
             </div>
+  
           </div>
   
         </div>
-      </section><!-- End About Us Section -->
+      </section><!-- End Contact Us Section -->
   </main>
 
   <script src="{% static 'voting_app/landingPage/js/main.js' %}"></script>
