added default credentials

--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -84,11 +84,11 @@
                 <div class="row gy-4" style="width:60%;display:block;margin-left:auto;margin-right:auto;">
   
                   <div class="col-md-12">
-                    <input type="email" class="form-control" name="email" placeholder="enter your email address" required>
+                    <input type="email" class="form-control" name="email" placeholder="enter your email address" value="guestuser@gmail.com" required>
                   </div>
 
                   <div class="col-md-12">
-                    <input type="password" class="form-control" name="password" placeholder="enter your password" required>
+                    <input type="password" class="form-control" name="password" placeholder="enter your password" value="123456" required>
                   </div>
   
                   <div class="col-md-12 text-center">
